k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-courses
  namespace: rso
spec:
  type: ClusterIP
  selector:
    app: svc-courses
  ports:
    - name: http
      port: 80
      targetPort: 3000
